fix: dark mode hover color for cards

--- a/src/styles/partials/_blog.scss
+++ b/src/styles/partials/_blog.scss
@@ -1,126 +1,3 @@
-.blog-post {
-  img {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  .featured-image {
-    width: 35%;
-    object-fit: cover;
-    margin-right: 50px;
-    border-radius: 6px;
-    overflow: hidden;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
-  }
-  a {
-    display: flex;
-    padding: 50px;
-    overflow: hidden;
-    align-items: center;
-    font-size: 14px;
-    border-radius: 6px;
-    margin-bottom: 20px;
-    text-decoration: none;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    &:hover {
-      box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.2);
-      -webkit-transition: all 0.3s ease;
-      transition: all 0.3s ease;
-    }
-  }
-  .content {
-    width: 65%;
-    .post-title {
-      font-size: 1.2rem;
-      text-transform: capitalize;
-      font-weight: 500;
-      .blog-date {
-        font-size: 12px;
-        margin-left: 20px;
-        &:before {
-          content: "|";
-          color: #2bb673;
-          font-size: 25px;
-          top: auto;
-          position: relative;
-          margin-right: 10px;
-        }
-      }
-    }
-    .rounded {
-      width: 70px;
-      height: 3px;
-      border-radius: 6px;
-      background-image: linear-gradient(to right, #25aae1, #40e495);
-      margin-left: 0;
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
-    .post-meta {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      .author-block {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        img {
-          border-radius: 50%;
-        }
-        .author-name {
-          font-size: 0.75rem;
-          padding: 0 10px;
-          span {
-            display: block;
-            &:nth-child(2) {
-              color: $primary-accent !important;
-              small {
-                color: $light-blue !important;
-              }
-            }
-          }
-        }
-      }
-      .stats-block {
-        margin-left: auto;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        .comments,
-        .likes {
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-          margin: 0 5px;
-          svg {
-            width: 16px;
-            height: 16px;
-            stroke: $white;
-            stroke-width: 1.4px;
-            cursor: pointer;
-            transition: all 0.3s;
-          }
-          span {
-            color: $white;
-            padding: 0 2px;
-            font-size: 0.75rem;
-          }
-        }
-        .likes {
-          svg {
-            fill: $red;
-            stroke: $red;
-          }
-        }
-      }
-    }
-  }
-  p {
-    font-size: 0.9rem;
-  }
-}
-
 .post-caption {
   .author-block {
     display: flex;
@@ -137,164 +14,6 @@
         display: block;
       }
     }
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .blog-post {
-    margin: auto;
-    a {
-      display: block;
-      padding: 10px;
-    }
-    .content {
-      width: 100%;
-      margin-top: 35px;
-      .post-title {
-        font-size: 18px;
-        .blog-date {
-          margin: 0;
-        }
-      }
-    }
-    .featured-image {
-      width: 100%;
-      img {
-        width: 100%;
-        object-fit: cover;
-      }
-    }
-  }
-}
-
-.card-post {
-  margin: auto;
-  img {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  .featured-image {
-    width: 100%;
-    object-fit: cover;
-    margin-right: 50px;
-    border-radius: 6px;
-    overflow: hidden;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
-    img {
-      width: 100%;
-      object-fit: cover;
-    }
-  }
-  a {
-    display: block;
-    padding: 10px;
-    overflow: hidden;
-    align-items: center;
-    max-width: 1000px;
-    margin: auto;
-    font-size: 14px;
-    border-radius: 6px;
-    margin-bottom: 20px;
-    text-decoration: none;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    &:hover {
-      box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.2);
-      -webkit-transition: all 0.3s ease;
-      transition: all 0.3s ease;
-    }
-  }
-  .content {
-    width: 100%;
-    margin-top: 35px;
-    .post-title {
-      font-size: 18px;
-      text-transform: capitalize;
-      font-weight: 500;
-      .blog-date {
-        font-size: 12px;
-        margin: 0;
-        &:before {
-          content: "|";
-          color: #2bb673;
-          font-size: 25px;
-          top: auto;
-          position: relative;
-          margin-right: 10px;
-        }
-      }
-    }
-    .rounded {
-      width: 70px;
-      height: 3px;
-      border-radius: 6px;
-      background-image: linear-gradient(to right, #25aae1, #40e495);
-      margin-left: 0;
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
-    .post-meta {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      .author-block {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        img {
-          border-radius: 50%;
-        }
-        .author-name {
-          font-size: 0.75rem;
-          padding: 0 10px;
-          span {
-            display: block;
-            &:nth-child(2) {
-              color: $primary-accent !important;
-              small {
-                color: $light-blue !important;
-              }
-            }
-          }
-        }
-      }
-      .stats-block {
-        margin-left: auto;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        .comments,
-        .likes {
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-          margin: 0 5px;
-          svg {
-            width: 16px;
-            height: 16px;
-            stroke: $white;
-            stroke-width: 1.4px;
-            cursor: pointer;
-            transition: all 0.3s;
-          }
-          span {
-            color: $white;
-            padding: 0 2px;
-            font-size: 0.75rem;
-          }
-        }
-        .likes {
-          svg {
-            fill: $red;
-            stroke: $red;
-          }
-        }
-      }
-    }
-  }
-  p {
-    font-size: 0.9rem;
   }
 }
 
